修改组件名称

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sun/utils",
+  "name": "sun-web-utils",
   "version": "0.0.1",
   "description": "前端工具函数，集成最小依赖的工具函数",
   "main": "./src/index.js",
